--- a/index.html
+++ b/index.html
@@ -1,13 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-two</title>
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/responsive.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="Css/style.css" />
+    <link rel="stylesheet" href="Css/responsive.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="brand-name">
+          <h1>Fitness</h1>
+        </div>
+        <div class="brand-manu">
+          <ul class="menu">
+            <li><button>Home</button></li>
+            <li>Service</li>
+            <li>Contact</li>
+            <li>About</li>
+          </ul>
+          <li class="menu-icon"><img src="images/menu.png" alt="" /></li>
+        </div>
+      </nav>
+      <div class="banner-container">
+        <div class="banner-content">
+          <h1>Get body in shape & stay healthy</h1>
+          <p>
+            A huge selection of health and fitness content, healthy recipes and
+            transformation stories to help you get fit and stay fit!
+          </p>
+          <div class="primary-btn">
+            <button class="first-btn">
+              Join <span class="club">Club</span> Now!
+            </button>
+            <button class="second-btn">Download App</button>
+          </div>
+        </div>
+        <div class="banner-pic">
+          <!-- <img src="images/background.png" /> -->
+          <div class="text-500 banner-text">
+            <h1>500+</h1>
+            <p>Free Workout Videos</p>
+          </div>
+          <div class="text-350">
+            <div class="circle"></div>
+            <div>
+              <h1>350+</h1>
+              <p>Video tutorial</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section>
+        <div class="hero-container">
+          <div class="hero-content">
+            <h2>Change Your Habits</h2>
+            <p>
+              We belive fitness should be accessible to everyone, everywhere,
+              regardless of income <br />
+              of the access to a gym.
+            </p>
+          </div>
+          <div class="img-container">
+            <div class="hero-img">
+              <div class="round-img">
+                <img src="images/image 3.png" />
+              </div>
+              <div class="round-text">
+                <h3>Movement</h3>
+                <p>We belive fitness should be accessible to everyone</p>
+              </div>
+            </div>
+            <div class="hero-img">
+              <div class="round-img">
+                <img src="images/image 2.png" />
+              </div>
+              <div class="round-text">
+                <h3>Time</h3>
+                <p>We belive fitness should be accessible to everyone</p>
+              </div>
+            </div>
+            <div class="hero-img">
+              <div class="round-img">
+                <img src="images/image 4.png" />
+              </div>
+              <div class="round-text">
+                <h3>Practice</h3>
+                <p>We belive fitness should be accessible to everyone</p>
+              </div>
+            </div>
+            <div class="hero-img">
+              <div class="round-img">
+                <img src="images/image 5.png" />
+              </div>
+              <div class="round-text">
+                <h3>Weight Loss</h3>
+                <p>We belive fitness should be accessible to everyone</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="run-container">
+          <div class="run-content">
+            <h1>Run an Extra Mile Easily</h1>
+            <p>
+              We belivee fitness shoud be accessible to everyone, <br />
+              everyone, regardless of income or access to gym. with <br />
+              hundreds of professional Workout.
+            </p>
+            <div class="primary-btn j-btn">
+              <button class="first-btn">Join Now</button>
+            </div>
+          </div>
+          <div class="run-img">
+            <img src="images/run.jpg" />
+          </div>
+        </div>
+      </section>
+      <section class="bmi-section">
+        <div class="bmi-container">
+          <div class="bmi-content">
+            <h1>BMI Calculator</h1>
+            <p>
+              We belive fitness should be accessible to everyone, everywhere,
+              regardless of <br />
+              income or access to a gym.
+            </p>
+          </div>
+          <div class="bmi-calculator">
+            <div class="bmi-chart">
+              <h2>BMI Calculator Chart</h2>
+              <table>
+                <tr>
+                  <td><span>BMI</span></td>
+                  <td><span>width status</span></td>
+                </tr>
+                <tr>
+                  <td>Below 18.5</td>
+                  <td>Underweight</td>
+                </tr>
+                <tr>
+                  <td>18.5 - 24.9</td>
+                  <td>healthy</td>
+                </tr>
+                <tr>
+                  <td>25.0 - 29.9</td>
+                  <td>Overweight</td>
+                </tr>
+                <td>30.0 - and Above</td>
+                <td>Obese</td>
+              </table>
+            </div>
+            <div class="bmi-input">
+              <div class="input-content">
+                <h2>Calculate your BMI</h2>
+                <p>
+                  we believe fitness should be accessible to everyone,
+                  everywhere regardless of income or access to a gym.
+                </p>
+              </div>
+              <div class="input-fild">
+                <div class="input">
+                  <input type="text" placeholder="Hight/cm" />
+                  <input type="text" placeholder="Weight/kg" />
+                  <input type="text" placeholder="Age" />
+                  <select name="sex">
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Other">Other</option>
+                  </select>
+                  <select id="Activitis" name="Activitis">
+                    <option value="bmi-calculator">bmi-calculator</option>
+                    <option value="Weight">Weight</option>
+                    <option value="100kg? what if">100kg? what if</option>
+                    <option value="Something else">Something else</option>
+                  </select>
+                </div>
+
+                <div class="primary-btn">
+                  <button class="first-btn calculate">Calculate</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="team-container">
+          <div class="team-content">
+            <h1>Meet Our Team</h1>
+            <p>
+              we believe fitness should be accessible to everyone, everywhere
+              regardless of income or access to a gym.
+            </p>
+          </div>
+          <div class="team-img">
+            <img id="images1" src="images/trainer1.png" />
+            <img id="images2" src="images/trainer2.png" />
+            <img id="images3" src="images/trainer3.png" />
+            <img id="images4" src="images/trainer4.png" />
+            <img id="images5" src="images/trainer5.png" />
+            <img id="images6" src="images/trainer6.png" />
+            <h3 id="name1" class="name">
+              Jerome Bell <br />
+              <span class="trainer">Trainer</span>
+            </h3>
+            <h3 id="name2" class="name">
+              Cameron Williamson <br />
+              <span class="trainer">Trainer</span>
+            </h3>
+            <h3 id="name3" class="name">
+              Darrell Steward <br />
+              <span class="trainer">Trainer</span>
+            </h3>
+            <h3 id="name4" class="name">
+              Dianne Russell <br />
+              <span class="trainer">Trainer</span>
+            </h3>
+            <h3 id="name5" class="name">
+              Cody Fisher<br />
+              <span class="trainer">Trainer</span>
+            </h3>
+            <h3 id="name6" class="name">
+              Theresa Webb<br />
+              <span class="trainer">Trainer</span>
+            </h3>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-container">
+        <div class="fitness">
+          <h1 class="brand-name Fit">Fitness</h1>
+          <p>
+            we believe fitness should be accessible to everyone, everywhere
+            regardless of income or access to a gym. With hundreds of
+            professional Workout
+          </p>
+        </div>
+        <div class="get-started">
+          <h1>Get started</h1>
+          <ul class="get">
+            <li>Service</li>
+            <li>Contact US</li>
+            <li>Affiliate Program</li>
+            <li>About Us</li>
+          </ul>
+        </div>
+        <div class="last-started">
+          <h1>Get started</h1>
+          <ul class="get">
+            <li>Fitness</li>
+            <li>Platform</li>
+            <li>Workout Libary</li>
+            <li>App Design</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="right-container">
+        <hr />
+        <p class="right">All right reserved @Fitness 2024</p>
+      </div>
+    </footer>
+  </body>
 </html>
