--- a/index.html
+++ b/index.html
@@ -9,45 +9,47 @@
   </head>
   <body>
     <header>
-      <nav class="navbar">
-        <div class="brand-name">
-          <h1>Fitness</h1>
-        </div>
-        <div class="brand-manu">
-          <ul class="menu">
-            <li><button>Home</button></li>
-            <li>Service</li>
-            <li>Contact</li>
-            <li>About</li>
-          </ul>
-          <li class="menu-icon"><img src="images/menu.png" alt="" /></li>
-        </div>
-      </nav>
-      <div class="banner-container">
-        <div class="banner-content">
-          <h1>Get body in shape & stay healthy</h1>
-          <p>
-            A huge selection of health and fitness content, healthy recipes and
-            transformation stories to help you get fit and stay fit!
-          </p>
-          <div class="primary-btn">
-            <button class="first-btn">
-              Join <span class="club">Club</span> Now!
-            </button>
-            <button class="second-btn">Download App</button>
+      <div class="head-back-color">
+        <nav class="navbar">
+          <div class="brand-name">
+            <h1>Fitness</h1>
           </div>
-        </div>
-        <div class="banner-pic">
-          <!-- <img src="images/background.png" /> -->
-          <div class="text-500 banner-text">
-            <h1>500+</h1>
-            <p>Free Workout Videos</p>
+          <div class="brand-manu">
+            <ul class="menu">
+              <li><button>Home</button></li>
+              <li>Service</li>
+              <li>Contact</li>
+              <li>About</li>
+            </ul>
+            <li class="menu-icon"><img src="images/menu.png" alt="" /></li>
           </div>
-          <div class="text-350">
-            <div class="circle"></div>
-            <div>
-              <h1>350+</h1>
-              <p>Video tutorial</p>
+        </nav>
+        <div class="banner-container">
+          <div class="banner-content">
+            <h1>Get body in shape & stay healthy</h1>
+            <p>
+              A huge selection of health and fitness content, healthy recipes
+              and transformation stories to help you get fit and stay fit!
+            </p>
+            <div class="primary-btn">
+              <button class="first-btn">
+                Join <span class="club">Club</span> Now!
+              </button>
+              <button class="second-btn">Download App</button>
+            </div>
+          </div>
+          <div class="banner-pic">
+            <img src="images/background.png" />
+            <div class="text-500 banner-text">
+              <h1>500+</h1>
+              <p>Free Workout Videos</p>
+            </div>
+            <div class="text-350 font-350">
+              <div class="circle"></div>
+              <div>
+                <h1>350+</h1>
+                <p>Video tutorial</p>
+              </div>
             </div>
           </div>
         </div>
@@ -60,7 +62,7 @@
             <h2>Change Your Habits</h2>
             <p>
               We belive fitness should be accessible to everyone, everywhere,
-              regardless of income <br />
+              regardless of income
               of the access to a gym.
             </p>
           </div>
@@ -121,72 +123,74 @@
         </div>
       </section>
       <section class="bmi-section">
-        <div class="bmi-container">
+
           <div class="bmi-content">
             <h1>BMI Calculator</h1>
             <p>
               We belive fitness should be accessible to everyone, everywhere,
-              regardless of <br />
-              income or access to a gym.
+              regardless of income or access to a gym.
             </p>
           </div>
-          <div class="bmi-calculator">
-            <div class="bmi-chart">
-              <h2>BMI Calculator Chart</h2>
-              <table>
-                <tr>
-                  <td><span>BMI</span></td>
-                  <td><span>width status</span></td>
-                </tr>
-                <tr>
-                  <td>Below 18.5</td>
-                  <td>Underweight</td>
-                </tr>
-                <tr>
-                  <td>18.5 - 24.9</td>
-                  <td>healthy</td>
-                </tr>
-                <tr>
-                  <td>25.0 - 29.9</td>
-                  <td>Overweight</td>
-                </tr>
-                <td>30.0 - and Above</td>
-                <td>Obese</td>
-              </table>
-            </div>
-            <div class="bmi-input">
-              <div class="input-content">
-                <h2>Calculate your BMI</h2>
-                <p>
-                  we believe fitness should be accessible to everyone,
-                  everywhere regardless of income or access to a gym.
-                </p>
+          <div class="bmi-backcolor">
+            <div class="bmi-calculator">
+              <div class="bmi-chart">
+                <h2>BMI Calculator Chart</h2>
+                <table class="table">
+                  <tr>
+                    <th>BMI</th>
+                    <th>width status</td>
+                  </tr>
+                  <tr>
+                    <td>Below 18.5</td>
+                    <td>Underweight</td>
+                  </tr>
+                  <tr>
+                    <td>18.5 - 24.9</td>
+                    <td>healthy</td>
+                  </tr>
+                  <tr>
+                    <td>25.0 - 29.9</td>
+                    <td>Overweight</td>
+                  </tr>
+                  <td>30.0 - and Above</td>
+                  <td>Obese</td>
+                </table>
               </div>
-              <div class="input-fild">
-                <div class="input">
-                  <input type="text" placeholder="Hight/cm" />
-                  <input type="text" placeholder="Weight/kg" />
-                  <input type="text" placeholder="Age" />
-                  <select name="sex">
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                    <option value="Other">Other</option>
-                  </select>
-                  <select id="Activitis" name="Activitis">
-                    <option value="bmi-calculator">bmi-calculator</option>
-                    <option value="Weight">Weight</option>
-                    <option value="100kg? what if">100kg? what if</option>
-                    <option value="Something else">Something else</option>
-                  </select>
+              <div class="bmi-input">
+                <div class="input-content">
+                  <h2>Calculate your BMI</h2>
+                  <p>
+                    we believe fitness should be accessible to everyone,
+                    everywhere regardless of income or access to a gym.
+                  </p>
                 </div>
+                <div class="input-fild">
+                  <div class="input">
+                    <input class="hight" type="text" placeholder="Hight/cm" />
+                    <input class="Weight" type="text" placeholder="Weight/kg" />
+                    <input class="hight" type="text" placeholder="Age" />
+                    <select id="option" name="sex">
+                      
+                      <option value="Male">Male</option>
+                      <option value="Female">Female</option>
+                      <option value="Other">Other</option>
+                    </select>
+                    <select id="Activitis" name="Activitis">
+                      <option value="bmi-calculator">bmi-calculator</option>
+                      <option value="Weight">Weight</option>
+                      <option value="100kg? what if">100kg? what if</option>
+                      <option value="Something else">Something else</option>
+                    </select>
+                  </div>
 
-                <div class="primary-btn">
-                  <button class="first-btn calculate">Calculate</button>
+                  <div class="primary-btn calc">
+                    <button class="first-btn calculate">Calculate</button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        
         <div class="team-container">
           <div class="team-content">
             <h1>Meet Our Team</h1>
