added challenge part training section

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
             <h2>Change Your Habits</h2>
             <p>
               We belive fitness should be accessible to everyone, everywhere,
-              regardless of income
-              of the access to a gym.
+              regardless of income of the access to a gym.
             </p>
           </div>
           <div class="img-container">
@@ -122,75 +121,114 @@
           </div>
         </div>
       </section>
-      <section class="bmi-section">
-
-          <div class="bmi-content">
-            <h1>BMI Calculator</h1>
-            <p>
-              We belive fitness should be accessible to everyone, everywhere,
-              regardless of income or access to a gym.
-            </p>
+      <section class="training-section">
+        <div class="training-content">
+          <h1>Trainings and Exercises</h1>
+          <p>
+            We believe fitness shoud be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+        <div class="training-img">
+          <div class="flex-1">
+            <div id="images1"><img /></div>
+            <div id="images2"><img /></div>
+            <div id="images3"><img /></div>
           </div>
-          <div class="bmi-backcolor">
-            <div class="bmi-calculator">
-              <div class="bmi-chart">
-                <h2>BMI Calculator Chart</h2>
-                <table class="table">
-                  <tr>
-                    <th>BMI</th>
-                    <th>width status</td>
-                  </tr>
-                  <tr>
-                    <td>Below 18.5</td>
-                    <td>Underweight</td>
-                  </tr>
-                  <tr>
-                    <td>18.5 - 24.9</td>
-                    <td>healthy</td>
-                  </tr>
-                  <tr>
-                    <td>25.0 - 29.9</td>
-                    <td>Overweight</td>
-                  </tr>
-                  <td>30.0 - and Above</td>
-                  <td>Obese</td>
-                </table>
+          <div class="flex-2">
+            <div id="images4"><img /></div>
+            <div id="images5"><img /></div>
+            <div id="images6"><img /></div>
+          </div>
+          <h3 id="N1" class="trainer-name">
+            Leg exerciseing <br />are a basic exercise
+          </h3>
+          <h3 id="N2" class="trainer-name">Push Up</h3>
+          <h3 id="N3" class="trainer-name">
+            Leg press: Jumping <br />
+            are a basic exercise
+          </h3>
+          <h3 id="N4" class="trainer-name">
+            hop on the treadmill <br />
+            are a basic exercise
+          </h3>
+          <h3 id="N5" class="trainer-name">
+            Weight Loss <br />
+            are a basic exercise
+          </h3>
+          <h3 id="N6" class="trainer-name">
+           up down: Sit Up <br />
+            are a basic exercise
+          </h3>
+        </div>
+      </section>
+      <section class="bmi-section">
+        <div class="bmi-content">
+          <h1>BMI Calculator</h1>
+          <p>
+            We belive fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+        <div class="bmi-backcolor">
+          <div class="bmi-calculator">
+            <div class="bmi-chart">
+              <h2>BMI Calculator Chart</h2>
+              <table class="table">
+                <tr>
+                  <th>BMI</th>
+                  <th>width status</th>
+                </tr>
+                <tr>
+                  <td>Below 18.5</td>
+                  <td>Underweight</td>
+                </tr>
+                <tr>
+                  <td>18.5 - 24.9</td>
+                  <td>healthy</td>
+                </tr>
+                <tr>
+                  <td>25.0 - 29.9</td>
+                  <td>Overweight</td>
+                </tr>
+                <td>30.0 - and Above</td>
+                <td>Obese</td>
+              </table>
+            </div>
+            <div class="bmi-input">
+              <div class="input-content">
+                <h2>Calculate your BMI</h2>
+                <p>
+                  we believe fitness should be accessible to everyone,
+                  everywhere regardless of income or access to a gym.
+                </p>
               </div>
-              <div class="bmi-input">
-                <div class="input-content">
-                  <h2>Calculate your BMI</h2>
-                  <p>
-                    we believe fitness should be accessible to everyone,
-                    everywhere regardless of income or access to a gym.
-                  </p>
+              <div class="input-fild">
+                <div class="input">
+                  <input class="hight" type="text" placeholder="Hight/cm" />
+                  <input class="Weight" type="text" placeholder="Weight/kg" />
+                  <input class="hight" type="text" placeholder="Age" />
+                  <select id="option" name="sex">
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Other">Other</option>
+                  </select>
+                  <select id="Activitis" name="Activitis">
+                    <option value="bmi-calculator">bmi-calculator</option>
+                    <option value="Weight">Weight</option>
+                    <option value="100kg? what if">100kg? what if</option>
+                    <option value="Something else">Something else</option>
+                  </select>
                 </div>
-                <div class="input-fild">
-                  <div class="input">
-                    <input class="hight" type="text" placeholder="Hight/cm" />
-                    <input class="Weight" type="text" placeholder="Weight/kg" />
-                    <input class="hight" type="text" placeholder="Age" />
-                    <select id="option" name="sex">
-                      
-                      <option value="Male">Male</option>
-                      <option value="Female">Female</option>
-                      <option value="Other">Other</option>
-                    </select>
-                    <select id="Activitis" name="Activitis">
-                      <option value="bmi-calculator">bmi-calculator</option>
-                      <option value="Weight">Weight</option>
-                      <option value="100kg? what if">100kg? what if</option>
-                      <option value="Something else">Something else</option>
-                    </select>
-                  </div>
 
-                  <div class="primary-btn calc">
-                    <button class="first-btn calculate">Calculate</button>
-                  </div>
+                <div class="primary-btn calc">
+                  <button class="first-btn calculate">Calculate</button>
                 </div>
               </div>
             </div>
           </div>
-        
+        </div>
+
         <div class="team-container">
           <div class="team-content">
             <h1>Meet Our Team</h1>
