training section responsive done

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
         </div>
         <div class="training-img">
           <div class="flex-1">
-            <div id="images1"><img /></div>
-            <div id="images2"><img /></div>
-            <div id="images3"><img /></div>
+            <div id="images11"></div>
+            <div id="images12"></div>
+            <div id="images13"></div>
           </div>
           <div class="flex-2">
-            <div id="images4"><img /></div>
-            <div id="images5"><img /></div>
-            <div id="images6"><img /></div>
+            <div id="images14"></div>
+            <div id="images15"></div>
+            <div id="images16"></div>
           </div>
           <h3 id="N1" class="trainer-name">
             Leg exerciseing <br />are a basic exercise
