--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <div class="banner-container">
           <div class="banner-content">
-            <h1>Get body in shape & stay healthy</h1>
+            <h1>Get body in <span class="shape">shape</span>  & stay healthy</h1>
             <p>
               A huge selection of health and fitness content, healthy recipes
               and transformation stories to help you get fit and stay fit!
