fixing some absoulte position value

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="banner-pic">
-            <img src="images/background.png" />
+            <img src="images/backgroundImge.png" />
             <div class="text-500 banner-text">
               <h1>500+</h1>
               <p>Free Workout Videos</p>
